# docs/swagger.yaml
@@ -441,6 +441,60 @@ paths:
       summary: Update a consumer test
       tags:
       - consumer_tests
+  /contribution/community:
+    get:
+      consumes:
+      - application/json
+      description: Get the total water amount and savings for the community
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get community contribution
+      tags:
+      - contribution
+  /contribution/kl:
+    get:
+      consumes:
+      - application/json
+      description: Get the number of smart and manual refill stations
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get contribution by station type
+      tags:
+      - contribution
+  /contribution/user:
+    get:
+      consumes:
+      - application/json
+      description: Get the total water amount and savings for a user
+      parameters:
+      - description: User ID
+        in: query
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get user contribution
+      tags:
+      - contribution
   /likes:
     delete:
       consumes:
@@ -672,6 +726,27 @@ paths:
       summary: Update a refill station problem
       tags:
       - refill_station_problems
+  /refill_station_review/average:
+    get:
+      consumes:
+      - application/json
+      description: Get the average review score for a refill station by its ID
+      parameters:
+      - description: Refill Station ID
+        in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: number
+      summary: Get the average review score for a refill station
+      tags:
+      - refill_station_reviews
   /refill_station_reviews:
     delete:
       consumes:
@@ -824,6 +899,27 @@ paths:
           schema:
             $ref: '#/definitions/database.RefillStation'
       summary: Update a refill station
+      tags:
+      - refill_stations
+  /refill_stations/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a refill station by its ID
+      parameters:
+      - description: Refill Station ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/database.RefillStation'
+      summary: Get a refill station by ID
       tags:
       - refill_stations
   /users:
